# fluxland

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  SECURITY_AUDIT.md  SPRINT_PLAN.md  TODO.md  flake.nix  meson.build  meson_options.txt
.github/: pull_request_template.md
.github/workflows/: ui-tests.yml
data/: apps  fluxland-hc-light.style  fluxland-session.desktop  fluxland.desktop  init  keys  menu  startup  style  wm-wayland.desktop
docs/: COVERAGE_90_ROADMAP.md  DEBRIEF.md  IMPROVEMENT_PLAN.md  PERFORMANCE_AUDIT.md  QUICKSTART.md  SCREEN_RECORDING.md  SECURITY.md  STYLES.md  STYLE_COMPAT_REPORT.md  THEMES.md  THEME_COMPAT_REPORT.md  UI_TEST_HARNESS_PLAN.md
docs/design/: ARCHITECTURE.md  FLUXBOX-COMPAT.md
docs/internal/: FEATURE_GAP_ANALYSIS.md  SECURITY_AUDIT.md
docs/research/: SUMMARY.md  fluxbox-ui-ux.md  qa-testing-strategy.md  system-programming.md  wayland-architecture.md
examples/: README.md
examples/minimal/: init  keys  menu  startup
examples/sloppy-focus/: init  startup
examples/styles/: default.style  wave.style
examples/styles/community/Carbonit/pixmaps/: focus.xpm  menu.xpm  stick_pressed.xpm  title.xpm
examples/styles/community/Clear/: theme.cfg
examples/styles/community/CoffeeDream/: theme.cfg
examples/styles/community/CoffeeDream/pixmaps/: close.xpm  highlight.xpm  max.xpm  min.xpm  select.xpm  unfocus.xpm
examples/styles/community/Plastick/: theme.cfg
examples/styles/community/Plastick/pixmaps/: button_max.xpm  button_max_pressed.xpm  button_stick.xpm  button_x.xpm  toolbar.xpm
examples/styles/community/Raven/: theme.cfg
examples/styles/community/Raven/pixmaps/: close_unfocus.xpm  max_pressed.xpm  max_unfocus.xpm  min_focus.xpm  stick_pressed.xpm  title_focused.xpm  toolbar.xpm
examples/styles/community/Soft_White/pixmaps/: bullet_hilite.xpm  close_pressed.xpm  close_unfocus.xpm  max_pressed.xpm  min_focus.xpm  min_pressed.xpm  min_unfocus.xpm  select.xpm  stick_focus.xpm  stick_unfocus.xpm  stuck_pressed.xpm  title.xpm  toolbar.xpm  toolbar_focused.xpm
examples/themes/: hc-dark.style
examples/themes/community/Carbonit/: theme.cfg
examples/themes/community/Carbonit/pixmaps/: close_pressed.xpm  max_pressed.xpm  min_pressed.xpm  pressed.xpm  stuck_focus.xpm  unfocus.xpm
examples/themes/community/CoffeeDream/pixmaps/: bullet.xpm
examples/themes/community/Graphite/: theme.cfg
examples/themes/community/Plastick/pixmaps/: button_min.xpm  button_min_pressed.xpm  button_stick_pressed.xpm  button_x_pressed.xpm
examples/themes/community/Raven/pixmaps/: close_focus.xpm  close_pressed.xpm  hilite.xpm  max_focus.xpm  min_pressed.xpm  min_unfocus.xpm  stick_focus.xpm  stick_unfocus.xpm  stuck_focus.xpm  title.xpm  (+3 more)
examples/themes/community/Soft_White/: theme.cfg
examples/wave-desktop/: init  startup  style
man/: fluxland-apps.5  fluxland-ctl.1  fluxland-init.5  fluxland-keys.5  fluxland-menu.5  fluxland-startup.5  fluxland-style.5  fluxland.1  wm-wayland-apps.5  wm-wayland-keys.5  wm-wayland-menu.5  wm-wayland-style.5  wm-wayland.1
packaging/: PKGBUILD  com.fluxland.Fluxland.yml  fluxland.spec
packaging/debian/: changelog  control
po/: LINGUAS  POTFILES.in  fluxland.pot
protocols/: meson.build
src/: animation.c  animation.h  atspi_bridge.c  atspi_bridge.h  autostart.c  autostart.h  config.c  config.h  cursor.c  cursor.h  cursor_actions.c  cursor_actions.h  cursor_snap.c  cursor_snap.h  decoration.c  decoration.h  drm_lease.c  drm_lease.h  drm_syncobj.c  drm_syncobj.h  focus_nav.c  focus_nav.h  foreign_toplevel.c  foreign_toplevel.h  fractional_scale.c  fractional_scale.h  gamma_control.c  gamma_control.h  i18n.h  idle.c  idle.h  input.c  input.h  ipc.c  ipc.h  ipc_commands.c  keybind.c  keybind.h  keyboard.c  keyboard.h  (+76 more)
tests/: meson.build  test_animation.c  test_atspi_bridge.c  test_autostart.c  test_config.c  test_cursor_snap.c  test_decoration_logic.c  test_drm_lease.c  test_focus_nav.c  test_foreign_toplevel.c  test_gamma_control.c  test_gesture.c  test_idle.c  test_input.c  test_integration.c  test_ipc.c  test_ipc_server.c  test_keybind.c  test_keyboard.c  test_layer_shell.c  test_main.c  test_menu.c  test_menu_interaction.c  test_mousebind.c  test_multi_client.c  test_output.c  test_output_mgmt.c  test_perf.c  test_placement.c  test_protocols.c  test_rcparser.c  test_render.c  test_rules.c  test_screen_cast.c  test_screencopy.c  test_server.c  test_session_lock.c  test_session_lock_logic.c  test_slit.c  test_small_protocols.c  (+13 more)
tests/fuzz/: fuzz_ipc_command.c  fuzz_keybind.c  fuzz_menu.c  fuzz_mousebind.c  fuzz_rcparser.c  fuzz_rules.c  fuzz_style.c  meson.build
tests/fuzz/corpus/ipc_command/: edge_cases.json  exec.json  get_windows.json  ping.json  subscribe.json
tests/fuzz/corpus/keybind/: edge_cases.txt  minimal.txt
tests/fuzz/corpus/menu/: default.txt  edge_cases.txt  empty.txt  minimal.txt
tests/fuzz/corpus/mousebind/: basic.txt  edge_cases.txt  empty.txt  full.txt  mixed.txt
tests/fuzz/corpus/rcparser/: edge_cases.txt  init.txt  minimal.txt  style.txt
tests/fuzz/corpus/rules/: basic.txt  edge_cases.txt  full.txt
tests/fuzz/corpus/style/: default.txt  edge_cases.txt  empty.txt  minimal.txt
tests/integration/: harness.c  harness.h
tests/ui/: README.md  conftest.py  pytest.ini  requirements.txt  test_accessibility.py  test_app_launch.py  test_arrangement.py  test_config.py  test_decorations.py  test_edge_cases.py  test_focus.py  test_ipc.py  test_keybindings.py  test_layers.py  test_menus.py  test_movement.py  test_placement.py  test_rules.py  test_slit.py  test_smoke.py  test_styles.py  test_tabs.py  test_toolbar.py  test_windows.py  test_workspaces.py
tests/ui/configs/default/: init  menu
tests/ui/configs/hc_dark/: init
tests/ui/configs/hc_light/: init
tests/ui/configs/sloppy_focus/: init
tests/ui/lib/: __init__.py  compositor.py  input_driver.py  ipc_client.py  report.py  screenshot.py
tests/visual/: image_compare.c  image_compare.h  test_decorations.c
tools/: fluxland-ctl.c  wm-wayland-ctl.c
(+8 files in other folders)
