option('xwayland', type: 'feature', value: 'auto', description: 'Enable support for X11 applications')
option('asan', type: 'boolean', value: false, description: 'Enable address sanitizer')
option('ubsan', type: 'boolean', value: false, description: 'Enable undefined behavior sanitizer')
option('man-pages', type: 'feature', value: 'auto', description: 'Generate and install man pages')
option('wlcs', type: 'boolean', value: false, description: 'Build WLCS (Wayland Conformance Test Suite) integration module')
